--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   "author": "@drumath2237",
   "license": "Apache-2.0",
   "dependencies": {
+    "eslint-config-prettier": "^8.8.0",
+    "prettier": "^2.8.8",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "eslint": "^8.42.0",
     "ts-node": "^10.9.1"
   }
 }
