--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "author": "@drumath2237",
   "license": "Apache-2.0",
   "dependencies": {
-    "eslint-config-prettier": "^8.8.0",
-    "prettier": "^2.8.8",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.8.0",
+    "prettier": "^2.8.8",
+    "vite-node": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "eslint": "^8.42.0",
