--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "create-babylon",
+  "name": "create-babylon-app",
   "version": "0.1.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "build": "tsc -b",
-    "dev": "ts-node src/index.ts",
-    "start": "npm run build && node ./dist/index.js"
+    "dev": "vite-node src/index.ts",
+    "start": "pnpm run build && node ./index.js"
   },
   "author": "@drumath2237",
   "license": "Apache-2.0",
@@ -14,12 +15,11 @@
     "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^8.8.0",
-    "prettier": "^2.8.8",
-    "vite-node": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "eslint": "^8.42.0",
-    "ts-node": "^10.9.1"
+    "eslint-config-prettier": "^8.8.0",
+    "prettier": "^2.8.8",
+    "vite-node": "^0.32.0"
   }
 }
