--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "@drumath2237",
   "license": "Apache-2.0",
   "dependencies": {
+    "@inquirer/prompts": "^2.1.1",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
