--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.1.3"
   },
   "devDependencies": {
+    "@types/node": "^20.3.0",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "eslint": "^8.42.0",
