--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@inquirer/prompts": "^2.1.1",
-    "typescript": "^5.1.3"
+    "fs-extra": "^11.1.1"
   },
   "devDependencies": {
+    "@types/fs-extra": "^11.0.1",
     "@types/node": "^20.3.0",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
+    "typescript": "^5.1.3",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "^2.8.8",
