--- a/templates/vite-ts/package.json
+++ b/templates/vite-ts/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@babylonjs/core": "^6.7.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
