--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "fs-extra": "^11.1.1"
   },
   "devDependencies": {
+    "@lerna-lite/cli": "^2.7.0",
+    "@lerna-lite/version": "^2.7.0",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.9.2",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
