--- a/package.json
+++ b/package.json
@@ -50,9 +50,6 @@
   "files": [
     "dist/",
     "templates/",
-    "index.cjs",
-    "LICENSE.md",
-    "README.md",
-    ""
+    "index.cjs"
   ]
 }
