:fire: fix lerna.json

--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,6 @@
 {
   "$schema": "node_modules/@lerna-lite/cli/schemas/lerna-schema.json",
   "version": "0.1.4",
-  "npmClient": "pnpm"
+  "npmClient": "pnpm",
+  "packages": ["./"]
 }
