--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,8 @@
 {
   "$schema": "node_modules/@lerna-lite/cli/schemas/lerna-schema.json",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "npmClient": "pnpm",
-  "packages": ["./"]
+  "packages": [
+    "./"
+  ]
 }
