--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fs-extra": "^11.2.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.8.3",
     "@lerna-lite/cli": "^3.5.1",
     "@lerna-lite/version": "^3.5.2",
     "@types/fs-extra": "^11.0.4",
