--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "dev": "vite-node src/index.ts",
     "build": "tsc -b",
     "start": "node ./index.cjs",
-    "version:set": "pnpm exec lerna version"
+    "version:set": "pnpm exec lerna version",
+    "lint": "biome lint ./src",
+    "format": "biome format --write ./src",
+    "check": "biome check ./src",
+    "check:write": "biome check --write ./src"
   },
   "author": "@drumath2237",
   "license": "Apache-2.0",
@@ -50,3 +54,4 @@
     "index.cjs"
   ]
 }
+
