--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,29 +2,33 @@ name: Build and Publish
 on:
   push:
     tags:
-      - 'v*'
+      - "v*"
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
         node-version: [20]
     steps:
-      - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2
+      - uses: actions/checkout@v4
+
+      - uses: pnpm/action-setup@v4
         with:
-          version: 8
+          version: 9
 
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'pnpm'
+          cache: "pnpm"
           registry-url: https://registry.npmjs.org
 
       - name: Install dependencies
         run: pnpm install
+
+      - name: Static test
+        run: pnpm check
 
       - name: Build
         run: pnpm run build
