--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lint": "biome lint ./src",
     "format": "biome format --write ./src",
     "check": "biome check ./src",
-    "check:write": "biome check --write ./src"
+    "check:write": "biome check --write ./src",
+    "check:ci": "biome ci ./src"
   },
   "author": "@drumath2237",
   "license": "Apache-2.0",
@@ -54,4 +55,3 @@
     "index.cjs"
   ]
 }
-
