--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,10 @@
   "$schema": "node_modules/@lerna-lite/cli/schemas/lerna-schema.json",
   "version": "0.1.5",
   "npmClient": "pnpm",
-  "packages": [
-    "./"
-  ]
+  "packages": ["./"],
+  "command": {
+    "version": {
+      "allowBranch": ["release/*"]
+    }
+  }
 }
