:green_heart: add missing workflow event in release job

--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -1,6 +1,11 @@
 name: Build and Publish
 on:
   pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - closed
 
 jobs:
   build_and_test:
