--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -41,7 +41,13 @@ jobs:
       && startsWith(github.head_ref, 'release/')
     steps:
       - uses: actions/checkout@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20.x"
+          registry-url: "https://registry.npmjs.org"
+          always-auth: true
       - name: Publish
-        run: npm publish
+        run: npm publish --provenance
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
