--- a/lerna.json
+++ b/lerna.json
@@ -2,14 +2,10 @@
   "$schema": "node_modules/@lerna-lite/cli/schemas/lerna-schema.json",
   "version": "0.2.0",
   "npmClient": "pnpm",
-  "packages": [
-    "./"
-  ],
+  "packages": ["./"],
   "command": {
     "version": {
-      "allowBranch": [
-        "release/*"
-      ]
+      "allowBranch": ["release/v*"]
     }
   }
 }
