--- a/lerna.json
+++ b/lerna.json
@@ -1,15 +1,11 @@
 {
   "$schema": "node_modules/@lerna-lite/cli/schemas/lerna-schema.json",
-  "version": "0.1.6",
+  "version": "0.1.5",
   "npmClient": "pnpm",
-  "packages": [
-    "./"
-  ],
+  "packages": ["./"],
   "command": {
     "version": {
-      "allowBranch": [
-        "release/v*"
-      ]
+      "allowBranch": ["release/v*"]
     }
   }
 }
