--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.14.2",
     "typescript": "^5.4.5",
+    "unbuild": "^2.0.0",
     "vite-node": "^1.6.0"
   },
   "keywords": [
