:recycle: biome format

--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "build": "unbuild",
     "start": "node ./bin/cli.mjs",
     "version:set": "pnpm exec lerna version",
-    "lint": "biome lint ./src",
-    "format": "biome format --write ./src",
-    "check": "biome check ./src",
-    "check:write": "biome check --write ./src",
-    "check:ci": "biome ci ./src"
+    "lint": "biome lint ./src ./bin",
+    "format": "biome format --write ./src ./bin",
+    "check": "biome check ./src ./bin",
+    "check:write": "biome check --write ./src ./bin",
+    "check:ci": "biome ci ./src ./bin"
   },
   "author": "@drumath2237",
   "license": "Apache-2.0",
