--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "@types/node": "^20.14.11",
     "jiti": "^1.21.6",
     "typescript": "^5.5.3",
-    "unbuild": "^2.0.0",
-    "vite-node": "^2.0.3"
+    "unbuild": "^2.0.0"
   },
   "keywords": [
     "babylonjs",
