--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@inquirer/prompts": "^5.2.1",
     "citty": "^0.1.6",
     "consola": "^3.2.3",
-    "fs-extra": "^11.2.0"
+    "fs-extra": "^11.2.0",
+    "pkg-types": "^1.1.3"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
