--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@inquirer/prompts": "^5.2.1",
     "citty": "^0.1.6",
     "consola": "^3.2.3",
+    "giget": "^1.2.3",
     "pkg-types": "^1.1.3"
   },
   "devDependencies": {
