:fire: fix ts version spec

--- a/templates/simple-ts/package.json
+++ b/templates/simple-ts/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "@babylonjs/core": "^7.20.1",
-    "typescript": "5.5.4",
+    "typescript": "^5.5.4",
     "vite": "^5.4.0"
   }
 }
